k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: item-management-api
spec:
  selector:
    app: item-management-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5001
  type: LoadBalancer
